fix presentation height and alignment

--- a/style.css
+++ b/style.css
@@ -19,4 +19,7 @@
 
 body {
     font-family: var(--main-font);
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
 }
