--- a/styles/presentation.css
+++ b/styles/presentation.css
@@ -79,7 +79,8 @@
         display: grid;
         grid-template-columns: 1fr auto 1fr;
         justify-items: start;
-        padding: 10em 0;
+        align-items: center;
+        height: 80vh;
     }
 
     .sidebar {
@@ -121,7 +122,7 @@
 
 @media screen and (min-width: 1728px) {
     .section-presentation {
-        padding: 16em 0;
+        height: 90vh;
     }
 
     .sidebar__link .fa-brands,
